--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,6 +71,7 @@
 @import "components/dictionary-menu";
 @import "components/status";
 @import "components/customer-info";
+@import "components/lot-table";
 
 //Layout
 @import "layout/header";
