закончил остаток страниц личного кабинета

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -5,6 +5,7 @@ $text_color: #001D3A;
 $grey: #646464;
 $green: #44C325;
 $red: #FF3D3D;
+$violet: #CCDCF7;
 
 // FONT FAMILY
 $font-weight-normal: 400;         // Regular (normal)
