--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,6 +65,7 @@
 @import "components/dictionary-menu";
 @import "components/status";
 @import "components/customer-info";
+@import "components/describe-flash";
 //Layout
 @import "layout/header";
 @import "layout/footer";
