--- a/src/scss/components/_info-block.scss
+++ b/src/scss/components/_info-block.scss
@@ -8,9 +8,13 @@
   padding: 24px 40px 24px 24px;
   border-radius: 8px;
   background-color: #F9F9F9;
-
   color: rgba( $text_color, .9);
   display: flex;
+  align-items: center;
+
+  &--violet {
+    background-color: $violet;
+  }
 
   &--sm {
     font-size: 14px;
