--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,6 +66,7 @@
 @import "components/status";
 @import "components/customer-info";
 @import "components/describe-flash";
+@import "components/dropzona";
 //Layout
 @import "layout/header";
 @import "layout/footer";
