--- a/src/scss/pages/_basket.scss
+++ b/src/scss/pages/_basket.scss
@@ -85,3 +85,18 @@
 .basket__move-main {
     font-weight: $font-weight-medium;
 }
+
+.basket__ad-form {
+    width: 500px;
+    flex-shrink: 0;
+}
+
+.basket__ad-textarea{
+    width: 600px;
+    margin-bottom: 32px;
+
+    textarea{
+        height: 236px;
+        overflow: hidden;
+    }
+}
