--- a/src/scss/components/_personal-account.scss
+++ b/src/scss/components/_personal-account.scss
@@ -23,3 +23,19 @@
   padding: 12px 16px;
   display: block;
 }
+
+.personal-account__link.active {
+  background-color: #CCDCF7;
+  font-weight: 500;
+  position: relative;
+}
+
+.personal-account__link.active::before {
+  content: "";
+  height: 100%;
+  width: 2px;
+  background: #3275EE;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
