страница добавить заявку + поправил на всех страницах модалку авторизации (имела старую вёрстку)

--- a/src/scss/pages/_basket.scss
+++ b/src/scss/pages/_basket.scss
@@ -61,19 +61,10 @@
 
 .basket__btn-send {
     width: 212px;
-    .loader {
-        display: none;
-    }
-    .is-loading & {
-        span {
-            display: none;
-        }
-        .loader {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    }
+}
+
+.basket__btn-send-suppliers{
+    width: 265px;
 }
 
 .basket__box {
