--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -38,6 +38,11 @@
         font-size: 14px;
         color: #646464;
     }
+
+    .search-input--right & {
+        padding-right: 40px;
+        padding-left: 16px;
+    }
 }
 
 .search-input__btn {
@@ -54,6 +59,10 @@
     img {
         width: 16px;
         height: auto;
+    }
+    .search-input--right & {
+        left: initial;
+        right: 0;
     }
 }
 
