--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -18,7 +18,7 @@
 }
 
 .navigation__list{
-  width: 100%;
+  width: 1250px;
   padding: 0 16px;
   justify-content: space-between;
   display: flex;
