--- a/src/scss/pages/_ceni-postavshikov-card.scss
+++ b/src/scss/pages/_ceni-postavshikov-card.scss
@@ -40,6 +40,7 @@
     overflow: hidden;
     margin-bottom: 16px;
     position: relative;
+    cursor: pointer;
 }
 
 .product-card__slider-nav .slider-item img {
