--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,7 @@
 // Custom components
 @import "components/helpers";
 @import "components/buttons";
+@import "components/blur-item";
 @import "components/inputs";
 @import "components/select";
 @import "components/grid";
