--- a/src/scss/components/_dropzona.scss
+++ b/src/scss/components/_dropzona.scss
@@ -42,11 +42,13 @@
 }
 
 .preview-box{
+  position: relative;
   width: 74px;
   height: 74px;
   border: 1px dashed #C4C4C4;
-  padding: 10px;
+  padding: 0;
   border-radius: 4px;
+  overflow: hidden;
 
   & + & {
     margin-top: 16px;
@@ -59,10 +61,22 @@
   }
 
   img {
+    position: relative;
+    z-index: 2;
     width: 100%;
     height: 100%;
     object-fit: contain;
   }
+}
+
+.preview-box--bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  filter: blur(13px);
 }
 
 .preview-box-col{
