create tender js

--- a/src/scss/pages/_tender-page.scss
+++ b/src/scss/pages/_tender-page.scss
@@ -99,3 +99,31 @@
     margin-top: 16px;
   }
 }
+
+.tender-select-category {
+  width: 100%;
+  font-size: 12px;
+  line-height: 160%;
+  text-align: center;
+  color: #646464;
+  padding: 23px 15px;
+}
+
+
+.tender-select-category__title {
+  font-size: 12px;
+  margin-bottom: 2px;
+}
+
+.tender-select-category__list {
+  font-size: 14px;
+  color: #001D3A;
+}
+
+.tender-select-category__action {
+  font-size: 12px;
+}
+
+.tender-select-category__action .link {
+  font-size: 12px;
+}
