--- a/src/scss/pages/_ceni-postavshikov-card.scss
+++ b/src/scss/pages/_ceni-postavshikov-card.scss
@@ -73,9 +73,9 @@
 }
 
 .product-card__slider .slider-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .product-card__link {
