--- a/src/scss/components/_personal-account-sidebar.scss
+++ b/src/scss/components/_personal-account-sidebar.scss
@@ -7,11 +7,12 @@
 }
 
 .personal-account-sidebar__head {
-    padding: 16px 24px;
+    padding: 12px 16px 12px;
     font-weight: $font-weight-medium;
     background-color: #F9F9F9;
     font-size: 16px;
     line-height: 160%;
+    border-bottom: 1px solid #DFDEE2;
 }
 
 .personal-account-sidebar__body {
@@ -22,6 +23,7 @@
     padding: 12px 16px;
     display: block;
     position: relative;
+    
     &::before {
         content: '';
         display: block;
@@ -41,5 +43,14 @@
         &::before {
             opacity: 1;
         }
+
+        &:hover {
+            background-color: #CCDCF7;
+        }
+    }
+
+    &:hover {
+        background-color: #F9F9F9;
+        color: #001D3A;
     }
 }
